--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.0"
+    "@astrojs/image": "^0.16.6",
+    "@astrojs/mdx": "^0.19.0",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.3.0",
+    "date-fns": "^2.29.3",
+    "sharp": "^0.32.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
