--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/image": "^0.16.6",
     "@astrojs/mdx": "^0.19.0",
     "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vercel": "^3.2.4",
     "astro": "^2.3.0",
     "date-fns": "^2.29.3",
     "sharp": "^0.32.0",
