--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@astrojs/vercel": "^3.2.4",
     "astro": "^2.3.0",
     "date-fns": "^2.29.3",
-    "sharp": "^0.32.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "sharp": "^0.31.3"
   }
 }
