--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@astrojs/image": "^0.16.6",
     "@astrojs/mdx": "^0.19.0",
+    "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vercel": "^3.2.4",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "astro": "^2.3.0",
     "date-fns": "^2.29.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
