--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,14 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     },
-    "types": ["@astrojs/image/client"]
+    "types": [
+      "@astrojs/image/client"
+    ],
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
