--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.16.6",
-    "@astrojs/mdx": "^0.19.0",
+    "@astrojs/image": "^0.16.9",
+    "@astrojs/mdx": "^0.19.7",
     "@astrojs/react": "^2.2.1",
-    "@astrojs/tailwind": "^3.1.1",
-    "@astrojs/vercel": "^3.2.4",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "astro": "^2.3.0",
-    "date-fns": "^2.29.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24"
+    "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^3.6.0",
+    "@keystatic/astro": "^0.0.8",
+    "@keystatic/core": "^0.0.108",
+    "astro": "^2.7.4",
+    "date-fns": "^2.30.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "sharp": "^0.31.3"
