--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier \"./src/**/*.{astro,tsx,ts,js,jsx,html}\" --write"
   },
   "dependencies": {
     "@astrojs/image": "^0.17.2",
@@ -20,16 +21,18 @@
     "@keystatic/core": "^0.0.112",
     "astro": "^2.9.2",
     "date-fns": "^2.30.0",
-    "mdx@latest": "link:astrojs/mdx@latest",
+    "mdx": "^0.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react@latest": "link:astrojs/react@latest",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
+    "prettier": "^3.0.1",
+    "prettier-plugin-astro": "^0.11.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "sharp": "^0.31.3"
   }
 }
